[🚀 사이클2 - 미션 (예약 대기 승인)] 밀란 미션 제출합니다. (#456)
* docs: 학습 로그 내 것으로 변경

* docs: 요구사항 정리

* docs: 예약 대기 목록 모델링 추가

* feat: 슬롯 기반 대기의 예약 전환으로 예약 취소 흐름 개선

- 예약 취소 시 대기가 있어도 지난 예약 여부를 먼저 검증
- 첫 번째 대기자가 있으면 기존 예약을 삭제하지 않고 예약자 이름만 변경하도록 UPDATE 흐름 추가
- reservation_waiting 스키마를 reservation_id 참조에서 date, time_id, theme_id 기반 슬롯 구조로 변경
- 대기 저장, 중복 검사, 첫 대기자 조회, 순번 계산 쿼리를 슬롯 기준으로 일관되게 수정
- repository 테스트를 새 waiting 스키마에 맞게 갱신

* test: 예약 삭제 흐름 테스트 추가

- 통합 테스트에서 사용 가능하도록 testConfiguration 정의

* feat: reservation update, delete가 일관된 흐름을 가지며 대기 전환 로직 구현

- update, delete는 모두 "기존의 예약 정보가 사라진다"는 결과가 있음
- 대기가 있다면 그 빈자리를 채우도록 구현

* refactor: 메서드 이름 변경

* test: 중간 실패 확인 테스트 추가

- @JdbcTest의 Transactional에 포함되지 않도록 NOT_SUPPORTED 옵션으로 진행

* docs: 문서 최신화

* refactor: 사용하지않는 메서드 삭제

* refactor: 승격 메서드와 저장 메서드 분리

- 일반 멤버가 update, delete 하는 경우 이미 past판단 됨
- 어드민이 delete하는 경우는 판단 필요없음

* fix: 대기 순번 확인 방식 일관화

- 생성 시각이 아닌, DB의 Id를 기준으로 순번을 정렬하도록 변경

* refactor: 메서드 네이밍 변경

- cancel보다 적절한 validate 동사로 변경

* refactor: slot conflict 상황에 대한 오케스트레이션 레벨 선 검증 추가

- 사용자 친화적 메시지를 던지도록 검증 추가

* feat: promote 시나리오에서 락을 획득하도록 기능 구현

* fix: findBySlotForUpdate 삭제 및 테스트 수정

- delete + save 경합 테스트에서 delete + delete 경합 테스트로 변경